force-app/main/default/objects/Funding_Award_Milestone__c/Funding_Award_Milestone__c.object-meta.xml
<CustomObject>
    <label>Funding Award Milestone</label>
    <nameField>
        <displayFormat>FAM-{00000}</displayFormat>
        <label>Funding Award Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>