force-app/main/default/objects/Funding_Award_Milestone__c/fields/Approval_date_of_phase_request__c.field-meta.xml
<CustomField>
    <fullName>Approval_date_of_phase_request__c</fullName>
    <label>Approval date of phase request</label>
    <type>Date</type>
</CustomField>