force-app/main/default/objects/Funding_Award_Milestone__c/fields/Baseline_co_funding_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_co_funding_A_A_spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Baseline co-funding A&amp;A spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>