force-app/main/default/objects/Funding_Award_Milestone__c/fields/Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Start_Date__c</fullName>
    <formula>Parent_Baseline__r.Baseline_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Start Date</label>
    <type>Date</type>
</CustomField>