force-app/main/default/objects/Funding_Award_Milestone__c/fields/CF_MS1_RAG__c.field-meta.xml
<CustomField>
    <fullName>CF_MS1_RAG__c</fullName>
    <label>CF MS1 RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>AMBER</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>