force-app/main/default/objects/Funding_Award_Milestone__c/fields/CF_MS2_RAG__c.field-meta.xml
<CustomField>
    <fullName>CF_MS2_RAG__c</fullName>
    <formula>IF(PC_CF_MS2_Overall_Progress__c &lt;= 0.20, &quot;RED&quot;,
IF(PC_CF_MS2_Overall_Progress__c &lt;= 0.40, &quot;AMBER/RED&quot;,
IF(PC_CF_MS2_Overall_Progress__c &lt;= 0.60, &quot;AMBER&quot;,
IF(PC_CF_MS2_Overall_Progress__c &lt;= 0.80, &quot;AMBER/GREEN&quot;,
IF(PC_CF_MS2_Overall_Progress__c &lt;= 1, &quot;GREEN&quot;,
IF(PC_CF_MS2_Overall_Progress__c &gt; 1, &quot;GREEN&quot;,
&quot;OTHER&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CF MS2 RAG</label>
    <type>Text</type>
</CustomField>