force-app/main/default/objects/Funding_Award_Milestone__c/fields/Co_funding_capital_spent__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_capital_spent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Co-funding capital spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>