force-app/main/default/objects/Funding_Award_Milestone__c/fields/Energy_Savings_kWh_Actual__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_kWh_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Energy Savings (kWh) Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>