force-app/main/default/objects/Funding_Award_Milestone__c/fields/Homes_post_installation_SAP_68_or_under__c.field-meta.xml
<CustomField>
    <fullName>Homes_post_installation_SAP_68_or_under__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Homes post-installation SAP 68 or under</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>