force-app/main/default/objects/Funding_Award_Milestone__c/fields/Homes_pre_installation_SAP_69_and_above__c.field-meta.xml
<CustomField>
    <fullName>Homes_pre_installation_SAP_69_and_above__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Homes pre-installation SAP 69 and above</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>