force-app/main/default/objects/Funding_Award_Milestone__c/fields/Homes_with_pre_installation_SAP_1_to_68__c.field-meta.xml
<CustomField>
    <fullName>Homes_with_pre_installation_SAP_1_to_68__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Homes with pre-installation  SAP 1 to 68</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>