force-app/main/default/objects/Funding_Award_Milestone__c/fields/Milestone_Display_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Display_Date__c</fullName>
    <formula>IF( Parent_Monthly_Update__c = Null,  Approval_date_of_phase_request__c ,  Reporting_Period_End__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Display Date</label>
    <type>Date</type>
</CustomField>