force-app/main/default/objects/Funding_Award_Milestone__c/fields/Monthly_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Update_Status__c</fullName>
    <formula>TEXT(Parent_Monthly_Update__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Update Status</label>
    <type>Text</type>
</CustomField>