force-app/main/default/objects/Funding_Award_Milestone__c/fields/MS1_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>MS1_Date_Completed__c</fullName>
    <description>Completion date of milestone 1 for this Baseline</description>
    <label>MS1 Date Completed</label>
    <type>Date</type>
</CustomField>