force-app/main/default/objects/Funding_Award_Milestone__c/fields/MS1_Reference__c.field-meta.xml
<CustomField>
    <fullName>MS1_Reference__c</fullName>
    <description>Reference number for CF milestone 1</description>
    <formula>Parent_Baseline__r.Baseline_Version__c &amp; &quot;-ms1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MS1 Reference</label>
    <type>Text</type>
</CustomField>