force-app/main/default/objects/Funding_Award_Milestone__c/fields/MS2_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>MS2_Date_Completed__c</fullName>
    <description>Completion date of milestone 2 for this Baseline</description>
    <label>MS2 Date Completed</label>
    <type>Date</type>
</CustomField>