force-app/main/default/objects/Funding_Award_Milestone__c/fields/MS2_Reference__c.field-meta.xml
<CustomField>
    <fullName>MS2_Reference__c</fullName>
    <description>Reference number for CF milestone 2</description>
    <formula>Parent_Baseline__r.Baseline_Version__c &amp; &quot;-ms2&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MS2 Reference</label>
    <type>Text</type>
</CustomField>