force-app/main/default/objects/Funding_Award_Milestone__c/fields/MS_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>MS_Date_Completed__c</fullName>
    <description>Date SP milestone completed</description>
    <label>MS Date Completed</label>
    <type>Date</type>
</CustomField>