force-app/main/default/objects/Funding_Award_Milestone__c/fields/MS_Reference__c.field-meta.xml
<CustomField>
    <fullName>MS_Reference__c</fullName>
    <formula>Parent_Baseline__r.Baseline_Version__c  &amp; &quot;-ms&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MS Reference</label>
    <type>Text</type>
</CustomField>