force-app/main/default/objects/Funding_Award_Milestone__c/fields/No_of_homes_completed_KPI_5__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_completed_KPI_5__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of homes completed (KPI 5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>