force-app/main/default/objects/Funding_Award_Milestone__c/fields/No_of_Homes_to_EPC_A_or_B__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_to_EPC_A_or_B__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Homes to EPC A or B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>