force-app/main/default/objects/Funding_Award_Milestone__c/fields/No_of_homes_to_EPC_C_Actual__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_to_EPC_C_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of homes to EPC C Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>