force-app/main/default/objects/Funding_Award_Milestone__c/fields/No_of_Homes_which_will_not_reach_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_which_will_not_reach_EPC_C__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Homes which will not reach EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>