force-app/main/default/objects/Funding_Award_Milestone__c/fields/Parent_Monthly_Update__c.field-meta.xml
<CustomField>
    <fullName>Parent_Monthly_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Monthly Update</label>
    <referenceTo>FundingAwardUpdate__c</referenceTo>
    <relationshipLabel>Funding Award Milestones</relationshipLabel>
    <relationshipName>Funding_Award_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>