force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Baseline_co_funding_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>PC_Baseline_co_funding_A_A_spend__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Baseline_co_funding_A_A_spend__c),
        Baseline_co_funding_A_A_spend__c = 0
    ),
    0,
    Co_funding_A_A_spent__c / Baseline_co_funding_A_A_spend__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Baseline co-funding A&amp;A spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>