force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Baseline_Grant_capital_spend__c.field-meta.xml
<CustomField>
    <fullName>PC_Baseline_Grant_capital_spend__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Baseline_Grant_capital_spend__c),
        Baseline_Grant_capital_spend__c= 0
    ),
    0,
   Grant_capital_spent__c / Baseline_Grant_capital_spend__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Baseline Grant capital spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>