force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_CF_MS2_Overall_Progress__c.field-meta.xml
<CustomField>
    <fullName>PC_CF_MS2_Overall_Progress__c</fullName>
    <formula>(
 PC_Baseline_Grant_capital_spend__c + 
 PC_No_of_homes_to_EPC_C__c +
 PC_No_Homes_which_will_not_reach_EPC_C__c +
 PC_No_of_Homes_to_EPC_A_or_B__c +
 PC_Starting_No_of_Social_Homes_EPC_C_A__c +
 PC_Starting_No_of_Social_Homes_EPC_G_D__c +
 PC_Total_Baseline_Measures_Trustmark__c +
 PC_Total_homes_to_be_upgraded__c +
 PC_Total_Homes_lodged_with_Trustmark__c
) / 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CF MS2 Overall Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>