force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Energy_Savings_kWh__c.field-meta.xml
<CustomField>
    <fullName>PC_Energy_Savings_kWh__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Energy_Savings_kWh__c),
        Energy_Savings_kWh__c = 0
    ),
    0,
    Energy_Savings_kWh_Actual__c / Energy_Savings_kWh__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Energy Savings (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>