force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_No_Homes_which_will_not_reach_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>PC_No_Homes_which_will_not_reach_EPC_C__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(No_of_Homes_which_will_not_reach_EPC_C__c),
        No_of_Homes_which_will_not_reach_EPC_C__c = 0
    ),
    0,
    Homes_post_installation_SAP_68_or_under__c / No_of_Homes_which_will_not_reach_EPC_C__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% No Homes which will not reach EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>