force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_No_of_Homes_to_EPC_A_or_B__c.field-meta.xml
<CustomField>
    <fullName>PC_No_of_Homes_to_EPC_A_or_B__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(No_of_Homes_to_EPC_A_or_B__c),
        No_of_Homes_to_EPC_A_or_B__c = 0
    ),
    0,
    Homes_post_installation_SAP_81_or_above__c / No_of_Homes_to_EPC_A_or_B__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% No of Homes to EPC A or B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>