force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_No_of_homes_to_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>PC_No_of_homes_to_EPC_C__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(No_of_homes_to_EPC_C__c),
        No_of_homes_to_EPC_C__c = 0
    ),
    0,
    No_of_homes_to_EPC_C_Actual__c / No_of_homes_to_EPC_C__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% No. of homes to EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>