force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_SP_Baseline_Co_funding_Spend__c.field-meta.xml
<CustomField>
    <fullName>PC_SP_Baseline_Co_funding_Spend__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(SP_Baseline_Co_funding_Spend__c),
        SP_Baseline_Co_funding_Spend__c = 0
    ),
    0,
    SP_Baseline_Co_funding_Spend_Actual__c / SP_Baseline_Co_funding_Spend__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% SP Baseline Co-funding Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>