force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_SP_MS_Overall_Progress__c.field-meta.xml
<CustomField>
    <fullName>PC_SP_MS_Overall_Progress__c</fullName>
    <formula>(PC_Energy_Savings_kWh__c +
 PC_No_of_homes_to_EPC_C__c +
 PC_SP_Baseline_Grant_Spend__c +
 PC_Total_homes_to_be_upgraded__c)/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% SP MS Overall Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>