force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Starting_No_of_Social_Homes_EPC_C_A__c.field-meta.xml
<CustomField>
    <fullName>PC_Starting_No_of_Social_Homes_EPC_C_A__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Starting_No_of_Social_Homes_EPC_C_A__c),
        Starting_No_of_Social_Homes_EPC_C_A__c = 0
    ),
    0,
    Homes_pre_installation_SAP_69_and_above__c / Starting_No_of_Social_Homes_EPC_C_A__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Starting No of Social Homes EPC C-A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>