force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Starting_No_of_Social_Homes_EPC_G_D__c.field-meta.xml
<CustomField>
    <fullName>PC_Starting_No_of_Social_Homes_EPC_G_D__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Starting_No_of_Social_Homes_EPC_G_D__c),
        Starting_No_of_Social_Homes_EPC_G_D__c = 0
    ),
    0,
    Homes_with_pre_installation_SAP_1_to_68__c / Starting_No_of_Social_Homes_EPC_G_D__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Starting No of Social Homes EPC G-D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>