force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Total_Baseline_Measures_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>PC_Total_Baseline_Measures_Trustmark__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Total_Baseline_Measures__c),
        Total_Baseline_Measures__c = 0
    ),
    0,
    Total_Baseline_Measures_lodged_Trustmark__c / Total_Baseline_Measures__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total Baseline Measures Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>