force-app/main/default/objects/Funding_Award_Milestone__c/fields/PC_Total_Homes_lodged_with_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>PC_Total_Homes_lodged_with_Trustmark__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Total_homes_to_be_upgraded__c),
        Total_homes_to_be_upgraded__c = 0
    ),
    0,
    Total_Homes_lodged_with_Trustmark__c / Total_homes_to_be_upgraded__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total Homes lodged with Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>