force-app/main/default/objects/Funding_Award_Milestone__c/fields/Reporting_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Start__c</fullName>
    <formula>Parent_Monthly_Update__r.Reporting_Period_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period Start</label>
    <type>Date</type>
</CustomField>