force-app/main/default/objects/Funding_Award_Milestone__c/fields/SP_Baseline_Grant_Spend_Actual__c.field-meta.xml
<CustomField>
    <fullName>SP_Baseline_Grant_Spend_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SP Baseline Grant Spend Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>