force-app/main/default/objects/Funding_Award_Milestone__c/fields/SP_MS_RAG__c.field-meta.xml
<CustomField>
    <fullName>SP_MS_RAG__c</fullName>
    <formula>IF(PC_SP_MS_Overall_Progress__c &lt;= 0.20, &quot;RED&quot;,
IF(PC_SP_MS_Overall_Progress__c &lt;= 0.40, &quot;AMBER/RED&quot;,
IF(PC_SP_MS_Overall_Progress__c &lt;= 0.60, &quot;AMBER&quot;,
IF(PC_SP_MS_Overall_Progress__c &lt;= 0.80, &quot;AMBER/GREEN&quot;,
IF(PC_SP_MS_Overall_Progress__c &lt;= 1, &quot;GREEN&quot;,
IF(PC_SP_MS_Overall_Progress__c &gt; 1, &quot;GREEN&quot;,
&quot;OTHER&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP MS RAG</label>
    <type>Text</type>
</CustomField>