force-app/main/default/objects/Funding_Award_Milestone__c/fields/Starting_No_of_Social_Homes_EPC_C_A__c.field-meta.xml
<CustomField>
    <fullName>Starting_No_of_Social_Homes_EPC_C_A__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting No. of Social Homes EPC C-A</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>