force-app/main/default/objects/Funding_Award_Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Milestone 1 Achieved</fullName>
            </value>
            <value>
                <fullName>Milestone 2 Achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>