force-app/main/default/objects/Funding_Award_Milestone__c/fields/Total_Baseline_Measures__c.field-meta.xml
<CustomField>
    <fullName>Total_Baseline_Measures__c</fullName>
    <label>Total Baseline Measures</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>