force-app/main/default/objects/Funding_Award_Milestone__c/fields/Total_Baseline_Measures_lodged_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>Total_Baseline_Measures_lodged_Trustmark__c</fullName>
    <label>Total Baseline Measures lodged Trustmark</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>