force-app/main/default/objects/Funding_Award_Milestone__c/fields/Total_Homes_lodged_with_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes_lodged_with_Trustmark__c</fullName>
    <description>Number of properties that have had measure lodged with Trustmark</description>
    <label>Total Homes lodged with Trustmark</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>