force-app/main/default/objects/Funding_Award_Milestone__c/fields/Total_homes_to_be_upgraded__c.field-meta.xml
<CustomField>
    <fullName>Total_homes_to_be_upgraded__c</fullName>
    <label>Total homes to be upgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>