force-app/main/default/objects/Funding_Award_Milestone__c/fields/Update_Month__c.field-meta.xml
<CustomField>
    <fullName>Update_Month__c</fullName>
    <formula>Parent_Monthly_Update__r.Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Month</label>
    <type>Text</type>
</CustomField>