force-app/main/default/objects/Funding_Award_Milestone__c/fields/X_CF_MS1_RAG__c.field-meta.xml
<CustomField>
    <fullName>X_CF_MS1_RAG__c</fullName>
    <description>Overall RAG for milestones on this baseline</description>
    <label>X CF MS1 RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>